@@ -1,7 +1,7 @@
 
 //OpenSCADA system module Protocol.SelfSystem file: self.cpp
 /***************************************************************************
- *   Copyright (C) 2007-2014 by Roman Savochenko, <rom_as@oscada.org>      *
+ *   Copyright (C) 2007-2015 by Roman Savochenko, <rom_as@oscada.org>      *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -68,7 +68,7 @@ using namespace SelfPr;
 //*************************************************
 //* TProt                                         *
 //*************************************************
-TProt::TProt( string name ) : TProtocol(MOD_ID), mTAuth(60), mComprLev(0), mComprBrd(80)
+TProt::TProt( string name ) : TProtocol(MOD_ID), mTAuth(60), mComprLev(0), mComprBrd(80), mSingleUserHostLimit(10)
 {
     pthread_mutexattr_t attrM;
     pthread_mutexattr_init(&attrM);
@@ -94,8 +94,7 @@ TProt::~TProt( )
 
 int TProt::sesOpen( const string &user, const string &pass, const string &src )
 {
-    if(!SYS->security().at().usrPresent(user) || !SYS->security().at().usrAt(user).at().auth(pass))
-	return -1;
+    if(!SYS->security().at().usrPresent(user) || !SYS->security().at().usrAt(user).at().auth(pass)) return -1;
 
     MtxAlloc res(sesRes, true);
 
@@ -105,14 +104,17 @@ int TProt::sesOpen( const string &user, const string &pass, const string &src )
     for(map<int, SAuth>::iterator aI = auths.begin(); aI != auths.end(); )
 	if(time(NULL) > (aI->second.tAuth+authTime()*60)) auths.erase(aI++);	//Long unused
 	else {
-	    if(aI->second.name == user && aI->second.src == src)	//More opened
-	    {
+	    if(aI->second.name == user && aI->second.src == src) {	//More opened
 		if(aOldI == auths.end() || aI->second.tAuth < aOldI->second.tAuth) aOldI = aI;
 		++i_oCnt;
 	    }
 	    ++aI;
 	}
-    if(i_oCnt > 10 && aOldI != auths.end()) auths.erase(aOldI);
+    if(i_oCnt > singleUserHostLimit() && aOldI != auths.end()) {
+	mess_err(nodePath().c_str(), _("Connections from the user '%s' and the source '%s' reached to limit %d. Erasing spare!"),
+	    user.c_str(), TSYS::strLine(src,0).c_str(), singleUserHostLimit());
+	auths.erase(aOldI);
+    }
 
     //New session ID generation
     int idSes = rand();
@@ -154,6 +156,7 @@ void TProt::load_( )
     setAuthTime(s2i(TBDS::genDBGet(nodePath()+"SessTimeLife",i2s(authTime()))));
     setComprLev(s2i(TBDS::genDBGet(nodePath()+"ComprLev",i2s(comprLev()))));
     setComprBrd(s2i(TBDS::genDBGet(nodePath()+"ComprBrd",i2s(comprBrd()))));
+    setSingleUserHostLimit(s2i(TBDS::genDBGet(nodePath()+"SingleUserHostLimit",i2s(singleUserHostLimit()))));
 }
 
 void TProt::save_( )
@@ -161,6 +164,7 @@ void TProt::save_( )
     TBDS::genDBSet(nodePath()+"SessTimeLife",i2s(authTime()));
     TBDS::genDBSet(nodePath()+"ComprLev",i2s(comprLev()));
     TBDS::genDBSet(nodePath()+"ComprBrd",i2s(comprBrd()));
+    TBDS::genDBSet(nodePath()+"SingleUserHostLimit",i2s(singleUserHostLimit()));
 }
 
 TProtocolIn *TProt::in_open( const string &name )	{ return new TProtIn(name); }
@@ -192,8 +196,7 @@ void TProt::outMess( XMLNode &io, TTransportOut &tro )
 		resp.assign(buf,resp_len);
 
 		// Wait tail
-		while((header=TSYS::strLine(resp.c_str(),0)).size() >= resp.size() || resp[header.size()] != '\x0A')
-		{
+		while((header=TSYS::strLine(resp.c_str(),0)).size() >= resp.size() || resp[header.size()] != '\x0A') {
 		    if(!(resp_len=tro.messIO(NULL,0,buf,sizeof(buf),0,true))) throw TError(nodePath().c_str(),_("Not full respond."));
 		    resp.append(buf, resp_len);
 		}
@@ -274,6 +277,7 @@ void TProt::cntrCmdProc( XMLNode *opt )
 	if(ctrMkNode("area",opt,1,"/prm",_("Parameters")))
 	    if(ctrMkNode("area",opt,1,"/prm/cfg",_("Module options"))) {
 		ctrMkNode("fld",opt,-1,"/prm/cfg/lf_tm",_("Life time of auth session(min)"),RWRWR_,"root",SPRT_ID,2,"tp","dec","min","1");
+		ctrMkNode("fld",opt,-1,"/prm/cfg/sUserHostLim",_("Single user and host connections limit"),RWRWR_,"root",SPRT_ID,1,"tp","dec");
 		ctrMkNode("fld",opt,-1,"/prm/cfg/compr",_("Compression level"),RWRWR_,"root",SPRT_ID,4,"tp","dec","min","-1","max","9",
 		    "help",_("ZLib compression level:\n"
 			     "  -1  - optimal speed-size;\n"
@@ -290,6 +294,10 @@ void TProt::cntrCmdProc( XMLNode *opt )
     if(a_path == "/prm/cfg/lf_tm") {
 	if(ctrChkNode(opt,"get",RWRWR_,"root",SPRT_ID,SEC_RD))	opt->setText(i2s(authTime()));
 	if(ctrChkNode(opt,"set",RWRWR_,"root",SPRT_ID,SEC_WR))	setAuthTime(s2i(opt->text()));
+    }
+    else if(a_path == "/prm/cfg/sUserHostLim") {
+	if(ctrChkNode(opt,"get",RWRWR_,"root",SPRT_ID,SEC_RD))	opt->setText(i2s(singleUserHostLimit()));
+	if(ctrChkNode(opt,"set",RWRWR_,"root",SPRT_ID,SEC_WR))	setSingleUserHostLimit(s2i(opt->text()));
     }
     else if(a_path == "/prm/cfg/compr") {
 	if(ctrChkNode(opt,"get",RWRWR_,"root",SPRT_ID,SEC_RD))	opt->setText(i2s(comprLev()));
