@@ -142,7 +142,8 @@ void TMess::putArg( const char *categ, int8_t level, const char *fmt, va_list ap
 
     level = vmin(Emerg, vmax(-Emerg,level));
     int64_t ctm = TSYS::curTime();
-    string s_mess = i2s(level) + "|" + categ + " | " + mess;
+    //string sMess = i2s(level) + "|" + categ + " | " + mess;
+    string sMess = i2s(level) + "[" + categ + "] " + mess;
 
     if(mLogDir & DIR_SYSLOG) {
 	int level_sys;
@@ -157,10 +158,10 @@ void TMess::putArg( const char *categ, int8_t level, const char *fmt, va_list ap
 	    case Emerg:		level_sys = LOG_EMERG;	break;
 	    default: 		level_sys = LOG_DEBUG;
 	}
-	syslog(level_sys, "%s", s_mess.c_str());
+	syslog(level_sys, "%s", sMess.c_str());
     }
-    if(mLogDir & DIR_STDOUT)	fprintf(stdout, "%s \n", s_mess.c_str());
-    if(mLogDir & DIR_STDERR)	fprintf(stderr, "%s \n", s_mess.c_str());
+    if(mLogDir&DIR_STDOUT)	fprintf(stdout, "%s: %s\n", tm2s(SYS->sysTm(),"").c_str(), sMess.c_str());
+    if(mLogDir&DIR_STDERR)	fprintf(stderr, "%s: %s\n", tm2s(SYS->sysTm(),"").c_str(), sMess.c_str());
     if((mLogDir&DIR_ARCHIVE) && SYS->present("Archive"))
 	SYS->archive().at().messPut(ctm/1000000, ctm%1000000, categ, level, mess);
 }
